5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1811_2573.log
== SUBMITION (2019-06-13 09:27:47) 
-- CODE:
from numpy import*
peso=array(eval(input("peso dos alunos: ")))
altura=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(peso)):
	if(altura[i]>0):
		v[i]=round(v[i]+(peso[i]/(altura[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
1.10451
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2573/main.py", line 7, in <module>
    v[i]=round(v[i]+(peso[i]/(altura[i]**2)),2)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:28:08) 
-- CODE:
from numpy import*
peso=array(eval(input("peso dos alunos: ")))
altura=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(peso)):
	if(altura[i]>0):
		v[i]=round(v[i]+(peso[i]/(altura[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
1.21248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2573/main.py", line 7, in <module>
    v[i]=round(v[i]+(peso[i]/(altura[i]**2)),2)
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:28:10) 
-- CODE:
from numpy import*
peso=array(eval(input("peso dos alunos: ")))
altura=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(peso)):
	if(altura[i]>0):
		v[i]=round(v[i]+(peso[i]/(altura[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:29:08) 
-- CODE:
from numpy import*
peso=array(eval(input("peso dos alunos: ")))
altura=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(peso)):
	if(altura[i]>0):
		v[i]=round(v[i]+(peso[i]/(altura[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:29:09) 
-- CODE:
from numpy import*
peso=array(eval(input("peso dos alunos: ")))
altura=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(peso)):
	if(altura[i]>0):
		v[i]=round(v[i]+(peso[i]/(altura[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:30:08) 
-- CODE:
from numpy import*
peso=array(eval(input("peso dos alunos: ")))
altura=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(peso)):
	if(altura[i]>0):
		X[i]=round(X[i]+(peso[i]/(altura[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
1.02939
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2573/main.py", line 7, in <module>
    X[i]=round(X[i]+(peso[i]/(altura[i]**2)),2)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:30:48) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(peso)):
	if(a[i]>0):
		X[i]=round(X[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
1.13455
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2573/main.py", line 4, in <module>
    x=zeros(size(altura), dtype=float)
NameError: name 'altura' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:30:59) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		X[i]=round(X[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
1.1042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2573/main.py", line 4, in <module>
    x=zeros(size(altura), dtype=float)
NameError: name 'altura' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:31:00) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(altura), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		X[i]=round(X[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:31:40) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(a), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		X[i]=round(X[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
0.834015
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2573/main.py", line 7, in <module>
    X[i]=round(X[i]+(p[i]/(a[i]**2)),2)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:31:46) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(a), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		X[i]=round(X[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:32:45) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(a), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		x[i]=round(X[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
1.16919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2573/main.py", line 7, in <module>
    x[i]=round(X[i]+(p[i]/(a[i]**2)),2)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:32:56) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(a), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		x[i]=round(x[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- EXECUTION TIME:
1.27004
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EM: 24.61
PESO NORMAL:
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EM: 17.44
ABAIXO DO PESO:
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EM: 37.79
OBESIDADE SEVERA:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:33:26) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(a), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		x[i]=round(x[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO: ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL: ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO: ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE: ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA: ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA: ")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:36:20) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(a), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		x[i]=round(x[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EM:", max(x))
if(max(x)<17):
	print("MUITO ABAIXO DO PESO:")
if(max(x)>=17)and(max(x)<=18.49):
	print("ABAIXO DO PESO ")
if(max(x)>=18.5)and (max(x)<24.99):
	print("PESO NORMAL ")
if(max(x)>=25)and (max(x)<29.99):
	print("ACIMA DO PESO ")
if(max(x)>=30)and (max(x)<34.99):
	print("OBESIDADE ")
if(max(x)>=35)and (max(x)<39.99):
	print("OBESIDADE SEVERA ")
if(max(x)>=40):
	print("OBESIDADE MORBIDA ")



-- EXECUTION TIME:
1.07598
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EM: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EM: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EM: 37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:37:38) 
-- CODE:
from numpy import*
p=array(eval(input("peso dos alunos: ")))
a=array(eval(input("altura dos alunos: ")))
x=zeros(size(a), dtype=float)
for i in range (size(p)):
	if(a[i]>0):
		x[i]=round(x[i]+(p[i]/(a[i]**2)),2)
print(x)
print("O MAIOR IMC DA TURMA EH:", max(x))
if(max(x)<17):
	print("MUITO ABAIXO DO PESO")
if(max(x)>=17) and (max(x)<=18.49):
	print("ABAIXO DO PESO ")
if(max(x)>=18.5) and (max(x)<24.99):
	print("PESO NORMAL")
if(max(x)>=25) and (max(x)<29.99):
	print("ACIMA DO PESO")
if(max(x)>=30) and (max(x)<34.99):
	print("OBESIDADE")
if(max(x)>=35) and (max(x)<39.99):
	print("OBESIDADE SEVERA")
if(max(x)>=40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.955254
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
